SVA-346 | Set up Expo (#164)
* Switched the app to using the Expo CLI and Expo Go with React Native -- you no longer use a local emulator to develop the app

* Should enable much easier development and deployment (this ticket/PR doesn't cover deployment -- there are separate tickets for App Store / Play Store deployment where we can address that)

* NB the front-end app test was failing because our Jest setup needs updating -- but as that test doesn't actually do anything useful yet, and fixing Jest feels like it's outside the scope of this PR, disabled the front-end app test script for now until we're ready to re-enable it (when we properly set up front-end app tests)

* Also deleted a few other unused files e.g. translations, dummy user data