@@ -47,109 +47,135 @@ Alternatively, you can go to the link in the instructions above for installing t
 
 # Requirements to run the project:
 
-1. Node.js LTS release
+1. Node.js LTS release ([the 'ACTIVE' version here](https://nodejs.dev/en/about/releases/))
 2. npm
-   > npm usually is installed when Node.js is installed. type npm --version to check if it is installed after installing Node.js in Command Terminal
-3. Go to the following link: https://reactnative.dev/docs/environment-setup - choose the 'React Native CLI Quickstart' tab, and follow the instructions for your platform
+   > npm usually is installed when Node.js is installed. Run the command `npm --version` to check if it is installed after installing Node.js in Command Terminal
+3. npx
+   > Once you have npm, run the command `npx --version` to check if npx is installed. If that doesn't work, you can install npx with the command `npm install -g npx`
+4. [Install the Expo Go app on your iOS or Android phone](https://expo.dev/client) -- when you're developing the app locally, you'll use Expo Go to test the app on your phone.  As part of this you'll need to [set up an Expo account](https://expo.dev/signup) if you don't have one already.
 
-   > **Note** Where the instructions refer to a particular version of Android or the Android SDK platform, use **Android 10** and **SDK platform 29** instead of the more recent one.
+# Code editor
 
-   > **Note** You can skip the sections of the React Native docs that describe setting up and running a new project, since we already have one.
+You can develop on your local machine.
 
-   > **Note** The instructions specify recommended Ruby version as v2.7.6. Please note the Volunteer app runs successfully on Ruby v2.7.3.
+Or if you want, you can use a cloud-based alternative like [GitHub Codespaces](https://github.com/features/codespaces) (this might be good if you have a very slow laptop for instance).  With a free GitHub plan you get up to 60 hours a month of development time in Codespaces (which is probably plenty to volunteer on this project!)  You can [start a codespace here](https://github.com/codespaces) -- use the Blank template.
+
+## Visual Studio Code
+
+If you're using Visual Studio Code for development, it's recommended that you:
+
+- Install the [ESLint extension](https://marketplace.visualstudio.com/items?itemName=dbaeumer.vscode-eslint)
+- Install the [Prettier extension](https://marketplace.visualstudio.com/items?itemName=esbenp.prettier-vscode)
+- [Enable formatting on save](https://scottsauber.com/2017/06/10/prettier-format-on-save-never-worry-about-formatting-javascript-again/). Combined with ESLint and Prettier, this takes care of some code style issues such as formatting, indentation and semicolon consistency for you automatically.
 
 # Setup and first run
 
-1. Ensure that you've gone through the setup instructions at the following link for your particular platform: https://reactnative.dev/docs/environment-setup (see notes [above](#requirements-to-run-the-project))
+1. Ensure that you've gone through the setup instructions above
 
 2. Clone the code from GitHub:
 
-   > `git clone https://github.com/Scottish-Tech-Army/Volunteer-app.git`
+   > Using SSH do `git clone git@github.com:Scottish-Tech-Army/Volunteer-app.git` or using https do `git clone https://github.com/Scottish-Tech-Army/Volunteer-app.git`
 
-3. Open Command terminal
+3. Open your terminal
+
+## API
 
 4. Go to the `api` folder inside the project folder (e.g. **/path/to/Volunteer-app/api**)
 
-5. Copy the `.env.example` file in the api root folder and name your new file `.env` in the same folder. Fill in the empty values (`""`) in your file for any credentials/settings (API keys for STA Jira API access, AirTable, etc)
+5. Copy the `.env.example` file in the api root folder and name your new file `.env` in the same folder -- e.g. using the command `cp .env.example .env` Fill in the empty values (`""`) in your file for any credentials/settings (API keys for STA Jira API access, AirTable, etc)
 
-   > **Note** For security reasons, the credentials themselves are not provided here. Ask in the [volunteer-app](https://scottishtecharmy.slack.com/archives/C01SUL6K5E1) Slack channel when you join the dev group, and somebody will send them to you.
+   > **For security reasons, the credentials themselves are not provided here.** Ask in the [volunteer-app](https://scottishtecharmy.slack.com/archives/C01SUL6K5E1) Slack channel when you join the dev group, and somebody will send them to you.
 
-6. At the command prompt type `npm install` then `npm start` to start the Volunteer App API server. You should see a message that says `Volunteer App API is listening on port <number>` - make a note of the port number for later.
+6. At the command prompt run `npm install` to install dependencies
 
-> **Note** Inside the `api` folder there are files `package.json` and `package-lock.json`. Everytime either of these is modified, it is advised to repeat this step before running the project.
+> **Note** Inside the `api` folder there are files `package.json` and `package-lock.json`. Every time either of these is modified, it is advised to repeat this step before running the project.
 
-7. Go to the `app` folder inside the project folder (e.g. **/path/to/Volunteer-app/app**)
+7. Then run the command `npm start` to start the Volunteer App API server. You should see a message that says `Running scheduled cron jobs... ` and `Volunteer App API is listening on port <number>`.  Leave this terminal window open.
 
-8. At the command prompt type `npm install`
+8. Open another terminal window and in this new window run the command `npm run tunnel`. This 'tunnels' your local API server: makes it available externally so your app running in Expo Go can access it (using a free external service called [Serveo](https://serveo.net/)).  You should see a message saying your `Forwarding HTTP traffic from: https://xxxxxxxxx.serveo.net` -- this is the URL of your local API server, make a note of it as you'll need it in a minute.
 
-   > **Note** Inside the `app` folder there are files `package.json` and `package-lock.json`. Everytime either of these is modified, it is advised to repeat this step before running the project.
+   > This URL should generally stay the same each time you run the tunnel command, but if you find it changes, you'll need to update the `STA_BASE_URL` value in your `app/src/Config/index.ts` file (see step 11 below). (There are paid services or more complicated solutions we could use which guarantee a fixed URL, but for now this feels like the best solution that's easy to use and free for all devs in the team.)
 
-   > **Note** you may need to run `npm install --legacy-peer-deps` or `npm install --force`
+## App
 
-9. If you are on a Mac and want to run the iOS build of the app, go to the `app/ios` folder in a terminal window. At the command prompt type `bundle install` followed by `pod install`.
-   > **Note** If the dependencies in `/api` or `/app` folders have been updated, the pods might need reinstalled as follows:
+9. Go to the `app` folder inside the project folder (e.g. **/path/to/Volunteer-app/app**)
 
-       pod deintegrate
-       rm -rf Pods/
-       pod setup
-       pod install
+10. At the command prompt type `npm install`
 
+   > Inside the `app` folder there are files `package.json` and `package-lock.json`. **Every time either of these is modified, it is advised to repeat this step before running the project.**
 
-10. If you're using Visual Studio Code for development, it's recommended that you install the [Prettier](https://marketplace.visualstudio.com/items?itemName=esbenp.prettier-vscode) extension and enable formatting on save. This takes care of some code style issues such as formatting, indentation and semicolon consistency for you automatically.
+   > **If you get an error about installing dependencies** you may need to run `npm install --legacy-peer-deps` or `npm install --force` (instead of `npm install`)
 
-11. Duplicate the example config file `app/src/Config/index.example.ts` and name your new file `app/src/Config/index.ts`
+11. Duplicate the example config file `app/src/Config/index.example.ts` and name your new file `app/src/Config/index.ts`  Set the value of `STA_BASE_URL` to the tunnelled URL of your local API server (the one you made a note of in step 8 above).
 
-    > **Note** If the app has difficulty connecting to the API, you may need to specify your private IP address and API port number in `app/src/Config/index.ts`. The IP address settings may vary depending on the setup of your dev machine and local network. There are various different IP settings that have worked for others, which include: `10.0.2.2` ([a special alias that the Android emulator uses for your dev machine](https://developer.android.com/studio/run/emulator-networking)); the private IP of the local dev machine; and the private IP of the default gateway for your network. You made a note of the API port number earlier. In the line `STA_BASE_URL: 'http://localhost:3000'`, replace `localhost` with your own IP, and if necessary, replace `3000` with the port number.
+12. Run Expo using `npm start`  This will run some commands and then it show you a QR code in your terminal.
 
-    > **Help** You can find the IP addresses for your dev machine and default gateway by following the instructions for your platform [here](https://www.techbout.com/find-public-and-private-ip-address-44552/).\
-    **Example** If your computer's private IP is 192.168.1.50 and the API is listening on port 3000, the line should now read `STA_BASE_URL: 'http://192.168.1.50:3000'`.
+  > You may get an automatic prompt to install `@expo/ngrok` or another package -- if so, type `y` to install it.
+  > If you get stuck at this stage, you might need to install `@expo/ngrok` manually, globally on your local machine: run `npm install -g @expo/ngrok` then try running `npm start` again.
 
-12. Type in command terminal: `npm run ios` or `npm run android`
+13. Connect your phone:
+- **iPhone:** open the camera and scan the QR code, tap on the link and it should open up the app in Expo Go
+- **Android:** open the Expo Go app itself and you can scan the QR code
+- You should now see your local development version of the app on your phone -- any changes you make in your code should show almost instantly on your phone.  (If you find you're not seeing changes on your phone or Expo Go loses the connection, [see tips here.](APP_DEVELOPMENT.md#expo-known-issues))
 
-13. When you've got the app to run, make a PR to improve this README! Fix something that caused you headaches, update something that's no longer correct, or add a training resource, or add something else you think would help other people to get up and running.
+14. When you've got the app to run, make a PR to improve this README! Fix something that caused you headaches, update something that's no longer correct, or add a training resource, or add something else you think would help other people to get up and running.
 
 # Troubleshooting
 
 Below are some commonly encountered issues and possible ways to resolve them. If it still doesn't work, post in the [volunteer-app](https://scottishtecharmy.slack.com/archives/C01SUL6K5E1) Slack channel and someone will help you.
 
-## The app won't build
+## The API won't run
 
-- When I run `npm install`, it fails with dependency resolution errors
-  > Sometimes this happens when one or more of the project dependencies gets updated and is out of step with the others. Try running `npm install --legacy-peer-deps` or `npm install --force`.
-- When I run `npm run android`, it fails and says that `ANDROID_HOME` is not set
-  > Go to the [React Native setup guide](https://reactnative.dev/docs/environment-setup), choose the 'React Native CLI Quickstart' tab, choose your platform, and make sure that you've set the ANDROID_HOME environment variable as described there. You may need to restart your terminal window in order for the change to take effect.
-- When I run `npm run android`, it fails with `java.lang.OutOfMemoryError` somewhere in the error messages
-  > Find the `.gradle` directory on your computer -- it may be a hidden directory, it will be outside of your Volunteer app directory, maybe in your home directory at e.g. `~/.gradle`  In that directory, create a new file `gradle.properties`, add this line to it `org.gradle.jvmargs=-Xmx2048m -XX:MaxPermSize=512m -XX:+HeapDumpOnOutOfMemoryError -Dfile.encoding=UTF-8` and save the file.  This tells the Android Java build process how much memory to use.  Try running `npm run android` again.  If you still get the same error, try increasing `2048` to a higher number (normally multiples of 1024 or 2048, e.g. `4096`).
-- When I run `npm run android`, it fails and says `com.android.ddmlib.InstallException: INSTALL_FAILED_VERSION_DOWNGRADE`
-  > This happens when you have installed a newer version of the app (in terms of Android version numbers) on your emulator and then you switch back to an older version.  (For example, maybe you were preparing to [deploy](DEPLOYMENT.md) a new version of the app on one branch, then you switched to another branch and tried to run that older version.)  With your Android emulator open, run the command `adb uninstall org.scottishtecharmy.volunteerapp` to uninstall the app from your emulator.  Then run `npm run android` again and it should work.
 - When I run `npm start` in `/api` folder, the server errors with code `EADDRINUSE`
   > It is likely there is an instance of a server running already. To end the old instance, in terminal put in:
   ``kill -9 `lsof -i:3000 -t` ``
   and try running the server again.
 
+## The app won't build
+
+- When I run `npm install`, it fails with dependency resolution errors
+  > Sometimes this happens when one or more of the project dependencies gets updated and is out of step with the others. Try running `npm install --legacy-peer-deps` or `npm install --force`.
+
+- I can't get Expo started in my terminal when I run `npm start` in the `app` directory
+   > You may get an automatic prompt to install `@expo/ngrok` or another package -- if so, type `y` to install it.
+  > If you get stuck at this stage, you might need to install `@expo/ngrok` manually, globally on your local machine: run `npm install -g @expo/ngrok` then try running `npm start` again.
+
+## The app gets stuck loading projects
+
+- The app gets stuck on the Projects screen -- projects never load
+  > Make sure the API is running on your local machine, and that your **api/.env** and **app/Config/index.ts** files are configured correctly (see [Setup and first run](#setup-and-first-run) above)
+  > Make sure you have two terminal windows open running the API: one running `npm start` and one running `npm run tunnel` (see above), both are needed in order for the app to be able to connect to the API
+  > Has your tunnelled URL changed? Check what you see in the terminal window where you've run `npm run tunnel` and see if it's the same as the `STA_BASE_URL` value in your `app/src/Config/index.ts` file -- if not, you need to update that file then restart the app.
+
 ## The app builds, but crashes when I run it
 
-- The app gets stuck on the 'loading' screen
-  > Make sure the API is running on your local machine, and that your **api/.env** and **app/Config/index.ts** files are configured correctly (see [Setup and first run](#setup-and-first-run) above)
 - The app crashes with an error that says 'Metro has encountered an error: Cannot read properties of undefined (reading 'transformFile')'
   > Make sure you are using the LTS version of Node (currently v16); see [suggested solutions on StackOverflow](https://stackoverflow.com/questions/69647332/cannot-read-properties-of-undefined-reading-transformfile-at-bundler-transfo). If you want to keep your current version of Node as well, you can use tools such as [nvm (MacOS/Linux)](https://github.com/nvm-sh/nvm) or [nvm-windows](https://github.com/coreybutler/nvm-windows) to manage your Node installations.
 - The app crashes with an opensslErrorStack: (error: 03000086)
   > Make sure you are using Node v16 LTS due to known conflicts on some devices between OpenSSL and Node v17+; see [suggested solutions on StackOverflow](https://stackoverflow.com/questions/74726224/opensslerrorstack-error03000086digital-envelope-routinesinitialization-e).
+
+## The app in Expo Go isn't showing my changes or has lost connection
+
+- [See the tips here](APP_DEVELOPMENT.md#expo-known-issues)
+
 # Subsequent run
 
-1. Open Command terminal.
+1. In a terminal window, go to the `api` folder inside the project folder (e.g. **/path/to/Volunteer-app/api**) and enter `npm start` to start the Volunteer App API server.
 
-2. Go to the `api` folder inside the project folder (e.g. **/path/to/Volunteer-app/api**) and enter `npm start` to start the Volunteer App API server.
+2. In a second terminal window, in the `api` folder enter `npm run tunnel` to tunnel your API server so the app in Expo Go can connect to it.
 
-3. Go to the `app` folder inside the project folder (e.g. **/path/to/Volunteer-app/app**) and enter `npm run ios` or `npm run android`.
+3. In a third terminal window, go to the `app` folder inside the project folder (e.g. **/path/to/Volunteer-app/app**) and enter `npm start` to run Expo
 
-   > **On Android,** if you get an error message that includes `INSTALL_FAILED_UPDATE_INCOMPATIBLE` this may be because you previously installed a newer version of the app for your emulator (e.g. on a new branch or testing someone else's pull request) then you switched back to an earlier version. Uninstall the app from your emulator with the command `adb shell pm uninstall org.scottishtecharmy.volunteerapp` then run `npm run android` again.
+4. Connect your phone to your local development version of the app in Expo Go: 
+- **iPhone:** open the camera and scan the QR code, this should open up the app in Expo Go
+- **Android:** open the Expo Go app itself and you can scan the QR code
+   > If you find you're not seeing changes on your phone or Expo Go loses the connection, [see tips here.](APP_DEVELOPMENT.md#expo-known-issues)
 
 # Development
 
 ## App
 
-[Please see here](APP_DEVELOPMENT.md) for more info on developing the front-end app, including NativeBase.
+[Please see here](APP_DEVELOPMENT.md) for more info on developing the front-end app, including more about React Native and Expo, and NativeBase.
 
 ## API
 
